# Indoor-PointCloud-to-CityJSON

./: Dockerfile  README.md  ransac_result.ply  requirements.txt  script.py
datasets/: stadskwekerij_subsampled.city.json  stadskwekerij_subsampled_stats.txt
ipcp/: script.py
ipcp/cpp_modules/: efficient_ransac  polyfit  polyfit_ransac
ipcp/cpp_modules/src/efficient_ransac/: efficient_ransac.cpp
ipcp/cpp_modules/src/polyfit/: polyfit.cpp
ipcp/datasets/: output.city.json
ipcp/modules/: floor_split.py  primitive_detection.py  room_detection.py  room_reconstruct.py
ipcp/notebooks/: Complete Pipeline.ipynb
ipcp/preprocessors/: spatial_subsample.py
ipcp/src/: interpolation.py  pipeline.py  region_growing.py
modules/: efficient_ransac  floor_split.py  mesh_stats.py  polyfit  polyfit_ransac  primitive_detection.py  primitive_detection_BK.py  room_reconstruct.py  room_reconstruct_BK.py
notebooks/: 0. Complete Pipeline.ipynb  Experimental.ipynb
preprocessors/: sor.py
src/cpp-scripts/efficient_ransac/: CMakeLists.txt
src/cpp-scripts/polyfit/: CMakeLists.txt
src/cpp-scripts/polyfit_ransac/: CMakeLists.txt  polyfit_ransac.cpp
src/utils/: cityjson_utils.py  math_utils.py  pcd_utils.py  plot_utils.py
